--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
+    "react-audio-player": "^0.16.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "source-map-explorer": "^2.5.2",
